--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,45 @@
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
     <!--Google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    <h1>Marcos Samuel de Lira Oliveira</h1>
+    <!-- Cabeçalho -->
+    <header>
+        <img src="./img/imagem_minha.jpg" alt="Marcos Samuel de Lira">
+    </header>
+    <!-- Principal -->
+    <main>
+        <h1>Marcos Samuel de Lira </h1>
+        <p>Projetos prático de Html5 no Senac, entusiasta em redes.</p>
+    </main>
+
+    <!-- Links -->
+    <div id="links">
+        <a href="https://www.linkedin.com/in/marcos-samuel-lira-8b333623a/">Linkedin</a>
+        <a href="https://github.com/marcosamuelira">GitHub</a>
+        <a href="https://web.whatsapp.com/">Agenda</a>
+        <a href="http://127.0.0.1:5500/index.html">Portifólio</a>
+
+
+    </div>
+
+    <!-- Rodapé -->
+    <footer>
+        <a href="https://www.linkedin.com/in/marcos-samuel-lira-8b333623a/"><img src="./img/linkedin.png"
+                alt="Linkedin"></a>
+        <a href="https://github.com/marcosamuelira"><img src="./img/github.png" alt="GitHub"></a>
+        <a href="https://web.whatsapp.com/"><img src="./img/whatsapp.png" alt="Whatsapp Agenda"></a>
+        <a href="http://127.0.0.1:5500/index.html"><img src="./img/portfolio.png" alt="Portifólio"></a>
+
+    </footer>
+
+
+
+
 </body>
+
 </html>
