folha de estilo

--- a/index.html
+++ b/index.html
@@ -12,42 +12,50 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
+    <!-- Folha de estilo-->
+     <link rel="stylesheet" href="style.css">    
 </head>
 
 <body>
-    <!-- Cabeçalho -->
-    <header>
-        <img src="./img/imagem_minha.jpg" alt="Marcos Samuel de Lira">
-    </header>
-    <!-- Principal -->
-    <main>
-        <h1>Marcos Samuel de Lira </h1>
-        <p>Projetos prático de Html5 no Senac, entusiasta em redes.</p>
-    </main>
-
-    <!-- Links -->
-    <div id="links">
-        <a href="https://www.linkedin.com/in/marcos-samuel-lira-8b333623a/">Linkedin</a>
-        <a href="https://github.com/marcosamuelira">GitHub</a>
-        <a href="https://web.whatsapp.com/">Agenda</a>
-        <a href="http://127.0.0.1:5500/index.html">Portifólio</a>
+    <!-- Container para o CSS Flex -->
+    <div class="container">
 
 
+        <!-- Cabeçalho -->
+        <header>
+            <img src="./img/imagem_minha.jpg" alt="Marcos Samuel de Lira">
+        </header>
+        <!-- Principal -->
+        <main>
+            <h1>Marcos Samuel de Lira </h1>
+            <p>Projetos prático de Html5 no Senac, entusiasta em redes.</p>
+        </main>
+
+        <!-- Links -->
+        <div id="links">
+            <a href="https://www.linkedin.com/in/marcos-samuel-lira-8b333623a/">Linkedin</a>
+            <a href="https://github.com/marcosamuelira">GitHub</a>
+            <a href="https://web.whatsapp.com/">Agenda</a>
+            <a href="http://127.0.0.1:5500/index.html">Portifólio</a>
+
+
+        </div>
+
+        <!-- Rodapé -->
+        <footer>
+            <a href="https://www.linkedin.com/in/marcos-samuel-lira-8b333623a/"><img src="./img/linkedin.png"
+                    alt="Linkedin"></a>
+            <a href="https://github.com/marcosamuelira"><img src="./img/github.png" alt="GitHub"></a>
+            <a href="https://web.whatsapp.com/"><img src="./img/whatsapp.png" alt="Whatsapp Agenda"></a>
+            <a href="http://127.0.0.1:5500/index.html"><img src="./img/portfolio.png" alt="Portifólio"></a>
+
+        </footer>
     </div>
-
-    <!-- Rodapé -->
-    <footer>
-        <a href="https://www.linkedin.com/in/marcos-samuel-lira-8b333623a/"><img src="./img/linkedin.png"
-                alt="Linkedin"></a>
-        <a href="https://github.com/marcosamuelira"><img src="./img/github.png" alt="GitHub"></a>
-        <a href="https://web.whatsapp.com/"><img src="./img/whatsapp.png" alt="Whatsapp Agenda"></a>
-        <a href="http://127.0.0.1:5500/index.html"><img src="./img/portfolio.png" alt="Portifólio"></a>
-
-    </footer>
 
 
 
 
 </body>
+
 
 </html>
