Atulização estilo de folha

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
     <!-- Folha de estilo-->
-     <link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -27,12 +27,12 @@
         </header>
         <!-- Principal -->
         <main>
-            <h1>Marcos Samuel de Lira </h1>
+            <h1>Marcos Samuel</h1>
             <p>Projetos prático de Html5 no Senac, entusiasta em redes.</p>
         </main>
 
         <!-- Links -->
-        <div id="links">
+        <div class="container">
             <a href="https://www.linkedin.com/in/marcos-samuel-lira-8b333623a/">Linkedin</a>
             <a href="https://github.com/marcosamuelira">GitHub</a>
             <a href="https://web.whatsapp.com/">Agenda</a>
