Finalização do projeto - Adiconar contato E-mail e WhatsApp

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
             <a href="https://www.linkedin.com/in/marcos-samuel-lira-8b333623a/">Linkedin</a>
             <a href="https://github.com/marcosamuelira">GitHub</a>
             <!-- Whatsapp API-->
-            <a href="https://api.whatsapp.com/send?phone=5511912345678">Whatsapp</a>
-            <a href="http://127.0.0.1:5500/index.html">Portifólio</a>
+            <a href="https://api.whatsapp.com/send?phone=5511963591106">Whatsapp</a>
+            <!-- E-mail -->
+            <a href="mailto:samuel.lira624@gmail.com?subject=Contato Instagram">Email</a>
 
 
         </div>
