Finalização do projeto - Adiconar Download Documento/catalogo

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
 
         <!-- Links -->
         <div class="container">
+             <!-- Linkedin -->
             <a href="https://www.linkedin.com/in/marcos-samuel-lira-8b333623a/">Linkedin</a>
-            <a href="https://github.com/marcosamuelira">GitHub</a>
+             <!-- Download Documento/Catalago -->
+            <a href="catalogo.pdf">Catalago</a>
             <!-- Whatsapp API-->
             <a href="https://api.whatsapp.com/send?phone=5511963591106">Whatsapp</a>
             <!-- E-mail -->
