--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
              <!-- Linkedin -->
             <a href="https://www.linkedin.com/in/marcos-samuel-lira-8b333623a/">Linkedin</a>
              <!-- Download Documento/Catalago -->
-            <a href="catalogo.pdf">Catalago</a>
+            <a href="catalogo.pdf">Catalogo</a>
             <!-- Whatsapp API-->
             <a href="https://api.whatsapp.com/send?phone=5511963591106">Whatsapp</a>
             <!-- E-mail -->
